; ModuleID = '/home/carl/AnghaBench/mpv/filters/extr_f_output_chain.c_mp_output_chain_set_audio_speed.c'
source_filename = "/home/carl/AnghaBench/mpv/filters/extr_f_output_chain.c_mp_output_chain_set_audio_speed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_output_chain = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.chain* }
%struct.chain = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_output_chain_set_audio_speed(%struct.mp_output_chain* %0, double %1, double %2) #0 {
  %4 = alloca %struct.mp_output_chain*, align 8
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  %7 = alloca %struct.chain*, align 8
  store %struct.mp_output_chain* %0, %struct.mp_output_chain** %4, align 8
  store double %1, double* %5, align 8
  store double %2, double* %6, align 8
  %8 = load %struct.mp_output_chain*, %struct.mp_output_chain** %4, align 8
  %9 = getelementptr inbounds %struct.mp_output_chain, %struct.mp_output_chain* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load %struct.chain*, %struct.chain** %11, align 8
  store %struct.chain* %12, %struct.chain** %7, align 8
  %13 = load %struct.chain*, %struct.chain** %7, align 8
  %14 = getelementptr inbounds %struct.chain, %struct.chain* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.chain*, %struct.chain** %7, align 8
  %17 = getelementptr inbounds %struct.chain, %struct.chain* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @set_speed_any(i32 %15, i32 %18, i32 1, double* %6)
  %20 = load %struct.chain*, %struct.chain** %7, align 8
  %21 = getelementptr inbounds %struct.chain, %struct.chain* %20, i32 0, i32 3
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.chain*, %struct.chain** %7, align 8
  %24 = getelementptr inbounds %struct.chain, %struct.chain* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @set_speed_any(i32 %22, i32 %25, i32 0, double* %5)
  %27 = load %struct.chain*, %struct.chain** %7, align 8
  %28 = getelementptr inbounds %struct.chain, %struct.chain* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.chain*, %struct.chain** %7, align 8
  %31 = getelementptr inbounds %struct.chain, %struct.chain* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @set_speed_any(i32 %29, i32 %32, i32 0, double* %5)
  ret void
}

declare dso_local i32 @set_speed_any(i32, i32, i32, double*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
